--- a/diario/templates/home.html
+++ b/diario/templates/home.html
@@ -108,7 +108,9 @@
         </div>
       </div>
     </div>
-
+    {% comment %}
+     #TODO: adicionar um segundo Chart
+    {% endcomment %}
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
       const ctx = document.getElementById('myChart');
